# image-change-detector

./: .gitignore  CLAUDE.md  MATRIX_README.md  README.md  build_and_serve.py  deploy.py  railway.toml  run_local.py
backend/: .dockerignore  Dockerfile  SUPABASE_SETUP.md  main.py  pyproject.toml  railway.toml  supabase_schema.sql
backend/src/change_detector/: __init__.py  server.py  supabase_client.py
frontend/: .eslintrc.json  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: MatrixRain.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
