[project]
name = "change-detector-server"
version = "0.1.0"
description = "FastMCP server for satellite image change detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "rasterio>=1.3.0",
    "aiohttp>=3.12.14",
    "pydantic>=2.11.7",
    # Hybrid AI Dependencies
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "clip-by-openai>=1.0.1",
    "transformers>=4.30.0",
]
